# nfr-refiner

./: .env.example  .gitignore  GEMINI.md  LICENSE  README.md  agents-cli-manifest.yaml  pyproject.toml
docs/: init-meta-prompt.md
docs/decisions/: 0001-reuse-vs-build.md
nfr_refiner/: agent.py  config.py  prompt.py
nfr_refiner/tools/: planguage_translator.py
