[project]
name = "nfr-refiner"
version = "0.1.0"
description = "Agent for refining NFRs in software development."
authors = [
    { name = "Ervin Varga", email = "ervin.varga@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform[adk,agent-engines,evaluation]>=1.156.0",
    "google-genai>=1.9.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.38",
    "google-cloud-spanner>=3.49.0",
    "a2a-sdk[http-server]~=0.3.22",
    "aiohttp>=3.13.4",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "protobuf>=6.31.1,<7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
    "google-adk[eval]>=1.31.0",
    "nest-asyncio>=1.6.0",
    "agent-starter-pack>=0.14.1",
    "ty>=0.0.56",
]

deployment = [
    "absl-py>=2.2.1",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.4.6",
    "mypy>=1.15.0",
    "codespell>=2.2.0",
    "types-pyyaml>=6.0.12.20240917",
    "types-requests>=2.32.0.20240914",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehension
    "PL", # Pylint rules
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "RUF" # ruff specific rules
]
ignore = [
    "E501", # Ignore line length for long LLM prompts
    "PLR0913", # Allow agents to have many arguments if needed,
    "C901", "PLR0915", # Ignores function complication rule throughout sample
    "E402", "PLC0415", # Ignore location and enumeration pertaining to imports
    "PLR2004" # Ignore magic values
]

[tool.ruff.lint.per-file-ignores]
# Global rule: ADK agents use __init__.py to expose their logic
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.hatch.build.targets.wheel]
packages = ["nfr_refiner"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.agent-starter-pack]
example_question = "Response time should be less than 1 second to display or refresh a webpage with order items."

[tool.agent-starter-pack.settings]
agent_directory = "nfr_refiner"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
